--- a/Purposes/Views/Shared/_Layout.cshtml
+++ b/Purposes/Views/Shared/_Layout.cshtml
@@ -19,19 +19,19 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="Index">All</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="AllPurposes">All</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="Privacy">Today</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="TodaysPurposes">Today</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="Privacy">Important</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="ImportantPurposes">Important</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="Privacy">Planned</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="PlannedPurposes">Planned</a>
                         </li>
                     </ul>
                 </div>
