--- a/Purposes/Views/Shared/_Layout.cshtml
+++ b/Purposes/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject PurposeContext Context
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -33,6 +34,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SmartLists" asp-action="PlannedPurposes">Planned</a>
                         </li>
+                        @if (Context.CustomLists.Count() != 0)
+                        {
+                            @foreach (var item in Context.CustomLists)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="CustomLists" asp-action="Index" asp-route-id="@item.Id">@item.Name</a>
+                                </li>
+                            }
+                        }
                     </ul>
                 </div>
             </div>
