--- a/Purposes/Views/SmartLists/Index.cshtml
+++ b/Purposes/Views/SmartLists/Index.cshtml
@@ -9,7 +9,7 @@
 {
     <div class="purpose">
         <purpose item="item" />
-        <a asp-action="EditPurpose" class="btn btn-light" asp-route-id="@item.Id">Edit</a>
-        <a asp-action="DeletePurpose" class="btn btn-light" asp-route-id="@item.Id">Delete</a>
+        <a asp-action="EditPurpose" asp-controller="Home" class="btn btn-light" asp-route-id="@item.Id">Edit</a>
+        <a asp-action="DeletePurpose" asp-controller="Home" class="btn btn-light" asp-route-id="@item.Id">Delete</a>
     </div>
 }
