--- a/Purposes/wwwroot/css/site.css
+++ b/Purposes/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+div.content {
+    margin: 5px 0px 5px 0px;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
